refactoring : 자동차 출력 책임 해소
기존의 자동차에서 출력값을 만들어내던 출력을 해소하고 dto를 만들어서 외부에서 처리하도록 수정하였습니다.